# neko-words

./: .env.example  .gitignore  README.md  docker-compose-external-db.yml  docker-compose.yml
.claude/skills/code-comments/: SKILL.md
api/: .env.example  Dockerfile  pyproject.toml
api/app/: main.py
api/app/api/v1/: api.py
api/app/api/v1/endpoints/: reviews.py  words.py
api/app/core/: config.py  db.py  logging.py
api/app/models/: review.py  word.py
api/app/services/: llm.py
cli/: .env.example  README.md  pyproject.toml
cli/app/: config.py  main.py
cli/app/commands/: add.py  review.py
docs/: architecture.md  requirements.md
web/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: AddWord.tsx  Layout.tsx  Review.tsx
