[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "socksio>=1.0.0",
    "sqlmodel>=0.0.31",
    "tenacity>=9.1.2",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.40.0",
]
